--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "koa-basic-auth": "^1.1.2",
     "koa-logger": "^1.2.2",
     "koa-router": "^3.4.0",
-    "koa-static": "^1.4.7"
+    "koa-static": "^1.4.7",
+    "pg": "^8.7.1"
   },
   "keywords": [
     "node",
