--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "url": "https://github.com/marexandre/koa-heroku-template"
   },
   "dependencies": {
-    "co-body": "^1.0.0",
-    "koa": "^0.12.2",
-    "koa-basic-auth": "^1.1.2",
-    "koa-logger": "^1.2.2",
-    "koa-router": "^3.4.0",
-    "koa-static": "^1.4.7",
+    "koa": "^2.2.0",
+    "koa-logger": "^3.0.0",
+    "@koa/router": "^8.0.5",
+    "koa-static": "^3.0.0",
     "pg": "^8.7.1"
   },
   "keywords": [
