--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "koa-logger": "^3.0.0",
     "@koa/router": "^8.0.5",
     "koa-static": "^3.0.0",
+    "koa-views": "^6.0.2",
+    "swig-templates": "^2.0.3",
     "pg": "^8.7.1"
   },
   "keywords": [
